added posts & scraping
